tests/files/parser_tests/should_fail/109.cmdr
//Should not parse multiple elses
if (true) {
	x = 3;
} else {
	x = 4;
} else {
	x = 6;
}